--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,14 @@
 
 <script src="../script/script.js" type="text/javascript"></script>
 
-<center>
-    <h1>
-        List of Enterprises
-    </h1>
-</center>
+<div>
+    <center>
+        <h1>
+            List of Enterprises
+        </h1>
+    </center>
+</div>
+
 
 
 <button onclick="listAllEnterprises()">Refresh</button>
@@ -26,10 +29,25 @@
 
 </div>
 
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close" onclick="closeSpan()">&times;</span>
+      <form action="">
+        <label for="user">Username:</label><br>
+        <input type="text" id="user" name="user" onkeypress="checkForm(event, this)"><br>
+        <label for="pass">Last name:</label><br>
+        <input type="pass" id="pass" name="pass" onkeypress="checkForm(event, this)">
+      </form>
+    </div>
+  
+  </div>
+  
 <center>
     <h1>
         Contact: Ho Chi Minh City of Technology<br>
-    Department: Computer Science and Engineering
+        Department: Computer Science and Engineering
     </h1>
     
 </center>
